cabal-version:      2.4
name:               pandoc-select-code
version:            0.1.0.1
description:        Pandoc filter to extract only the code blocks from a source file, discarding all other elements.
synopsis:           Pandoc filter to extract only the code blocks.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2020-2022 Amy de Buitléir
category:           Text
extra-source-files: CHANGELOG.md

executable pandoc-select-code
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  main-is:        SelectCode.hs
  build-depends:
    base >= 4.16.3 && < 4.17,
    pandoc >= 2.19.2 && < 2.20,
    pandoc-types >= 1.22.2 && < 1.23
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
