cabal-version:   3.0
name:            pandoc-select-code
version:         1.0.0.1
synopsis:        Pandoc filter to extract only the code blocks.
description:
  For more information and a tutorial on how to use this package,
  please see the README at <https://github.com/mhwombat/pandoc-select-code#readme>.
homepage:        https://github.com/mhwombat/pandoc-select-code
bug-reports:     https://github.com/mhwombat/pandoc-select-code/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Amy de Buitléir
maintainer:      amy@nualeargais.ie
copyright:       (c) 2020-2023 Amy de Buitléir
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type:              git
  location:          https://github.com/mhwombat/pandoc-select-code.git

executable pandoc-select-code
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  main-is:        SelectCode.hs
  build-depends:
    base >= 4.16.4 && < 5,
    pandoc >= 2.19.2 && < 4,
    pandoc-types >= 1.22.2 && < 1.24
  ghc-options: -Wall -Wunused-packages
